--- a/manifest.json
+++ b/manifest.json
@@ -2,24 +2,24 @@
   "name": "دليل الأماكن",
   "short_name": "دليلي",
   "description": "دليل شامل للأماكن والأنشطة والعروض في مدينتك.",
-  "start_url": "/e-mall/index.html",
-  "scope": "/e-mall/",             
+  "start_url": "/e-mall/index.html",  // <--- تم تحديث هذا المسار
+  "scope": "/e-mall/",             // <--- تم إضافة هذا المسار لتعريف نطاق PWA
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#007bff",
   "icons": [
     {
-      "src": "/e-mall/images/icon-192x192.png",
+      "src": "/e-mall/images/icon-192x192.png", // <--- تم تحديث هذا المسار
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/e-mall/images/icon-512x512.png",
+      "src": "/e-mall/images/icon-512x512.png", // <--- تم تحديث هذا المسار
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "/e-mall/images/maskable_icon.png",
+      "src": "/e-mall/images/maskable_icon.png", // <--- تم تحديث هذا المسار
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
