--- a/owner/manifest.json
+++ b/owner/manifest.json
@@ -2,8 +2,7 @@
     "name": "لوحة تحكم المعلن - دليل الأماكن",
     "short_name": "المعلن",
     "description": "لوحة تحكم أصحاب المحلات لإدارة معلوماتهم وإعلاناتهم.",
-    "start_url": "/owner/register.html",  
-    "scope": "/owner/",                    
+    "start_url": "/E-mall/owner/register.html",  "scope": "/E-mall/owner/",                    
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#007bff",
